# PN532-PicoSDK

./: CMakeLists.txt
PN532/: PN532.cpp  PN532Interface.h  PN532_debug.h
PN532_SPI/: PN532_SPI.cpp  PN532_SPI.h
